@@ -13,10 +13,16 @@ set-option -g default-shell /bin/zsh
 # ==============================================================================
 # 鼠标滚动
 # ==============================================================================
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+# >= version 2.1
+# ==============================================================================
+setw -g mouse on
+# ==============================================================================
+# < version 2.1
+# ==============================================================================
+#setw -g mode-mouse on
+#set -g mouse-select-pane on
+#set -g mouse-resize-pane on
+#set -g mouse-select-window on
 
 # ==============================================================================
 # vi 模式
